Add detach feature

--- a/tests/.env.test
+++ b/tests/.env.test
@@ -10,7 +10,7 @@ VHD_NAME="disk"
 VHD_PATH="${WSL_DISKS_DIR}${VHD_NAME}.vhdx"
 
 # Default VHD UUID (update after creating VHD)
-VHD_UUID="3e76fe9e-c345-4097-b8e2-aa3936ab83bc"
+VHD_UUID="57fd0f3a-4077-44b8-91ba-5abdee575293"
 
 # Default mount point (Linux path)
-MOUNT_POINT="/home/$USER/${VHD_NAME}"
+MOUNT_POINT="/home/$USER/share"
