Refactor code to have better function respnsability separation

--- a/tests/.env.test
+++ b/tests/.env.test
@@ -3,11 +3,11 @@
 # Directory where VHD files are stored (Windows path format with forward slashes)
 WSL_DISKS_DIR="C:/aNOS/VMs/wsl_test/"
 
+# Default mount point (Linux path)
+MOUNT_POINT="/home/$USER/wsl_disks/"
+
 # Default VHD name for WSL attachment
 VHD_NAME="disk"
 
 # Default VHD file path
 VHD_PATH="${WSL_DISKS_DIR}${VHD_NAME}.vhdx"
-
-# Default mount point (Linux path)
-MOUNT_POINT="/home/$USER/share"
