--- a/tests/.env.example
+++ b/tests/.env.example
@@ -1,7 +1,7 @@
 # WSL VHD Disk Management - Test Environment Configuration
 
 # Directory where test VHD files are stored (Windows path format with forward slashes)
-WSL_DISKS_DIR="C:/aNOS/VMs/wsl_tests/"
+WSL_DISKS_DIR="Fill in your path here, e.g., D:/wsl_tests/"
 
 # Directory where test VHDs are mounted (Linux path)
-MOUNT_DIR="/home/$USER/wsl_tests/"
+MOUNT_DIR="Fill in your path here, e.g., /mnt/wsl_tests/"
