Fix tests bronken after previous changes

--- a/tests/.env.test
+++ b/tests/.env.test
@@ -5,3 +5,7 @@ WSL_DISKS_DIR="C:/aNOS/VMs/wsl_tests/"
 
 # Directory where test VHDs are mounted (Linux path)
 MOUNT_DIR="/home/$USER/wsl_tests/"
+
+# Test-specific disk tracking file (separate from production)
+# This file is cleaned up after tests complete
+TEST_DISK_TRACKING_FILE="$HOME/.config/wsl-disk-management/test_vhd_mapping.json"
