feat: Initialize Go migration with foundation packages
Phase 1 Complete - Foundation:
- Go module initialized (github.com/rjdinis/vhdm)
- internal/types: Error types and VHD state enums
- internal/validation: Input validation (paths, UUIDs, mount points)
- internal/logging: Structured logging with levels and quiet/debug modes
- internal/config: Configuration management with env override
- internal/tracking: Persistent JSON tracking file management
- pkg/utils: Path conversion, size utilities, table formatting

CLI Commands (scaffolded with stubs):
- All 11 commands from bash version scaffolded
- status command fully functional (reads tracking file)
- Other commands show TODO placeholders

Uses Cobra CLI framework. Binary compiles and runs.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
 tests/.env.test
 tests/vhd_mapping.json
+# Go binary
+/vhdm
+
+# Go build cache
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+*.test
+*.out
+go.work
+go.work.sum
